fixed bug where slider contents collapse when moved

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ body {
   top: 0;
   bottom: 0;
   right: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
   overflow: hidden;
